# barflow-dispenser-controller

./: LICENSE  README.md  docker-compose-redis.yml  setup.sh
BarFlowController/: Cargo.toml  Dockerfile  README.md  build.rs
BarFlowController/config/: device_setup.toml
BarFlowController/protos/: barflow.proto
BarFlowController/src/: main.rs  redis_connect.rs
BarFlowController/src/config_parser/: helper.rs
BarFlowController/src/modbus_helper/: helper.rs
