[package]
name = "bar_flow_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.11.6"
redis = "0.22.3"
rodbus = "1.1.0"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
toml = "0.6.0"
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
